--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </div>
                 <div class="column right">
                     <div class="text">I'm Khilan and I'm a <span class="typing-2"></span></div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ut voluptatum eveniet doloremque autem excepturi eaque, sit laboriosam voluptatem nisi delectus. Facere explicabo hic minus accusamus alias fuga nihil dolorum quae. Explicabo illo unde, odio consequatur ipsam possimus veritatis, placeat, ab molestiae velit inventore exercitationem consequuntur blanditiis omnis beatae. Dolor iste excepturi ratione soluta quas culpa voluptatum repudiandae harum non.</p>
+                    <p>Seasoned and independent Front End Developer with 1 years of experience in blending the art of design with skill of programming to deliver an immersive and engaging user experience through efficient website development, proactive feature optimization, and relentless debugging.Very passionate about aesthetics and UI design. </p>
                     <a href="#">Download CV</a>
                 </div>
             </div>
@@ -103,7 +103,7 @@
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">My creative skills & experiences.</div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, ratione error est recusandae consequatur, iusto illum deleniti quidem impedit, quos quaerat quis minima sequi. Cupiditate recusandae laudantium esse, harum animi aspernatur quisquam et delectus ipsum quam alias quaerat? Quasi hic quidem illum. Ad delectus natus aut hic explicabo minus quod.</p>
+                    <p>Expand features, refine code, and improve processes, producing smoother operations and enhancing user engagement,Designed dynamic and browser compatible pages using HTML5, CSS3, jQuery, and Javascript.Designing frontend within object-oriented Javascript frameworks like Angular.Js and React.js</p>
                     <a href="#">Read more</a>
                 </div>
                 <div class="column right">
@@ -156,7 +156,7 @@
             <div class="contact-content">
                 <div class="column left">
                     <div class="text">Get in Touch</div>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos harum corporis fuga corrupti. Doloribus quis soluta nesciunt veritatis vitae nobis?</p>
+       
                     <div class="icons">
                         <div class="row">
                             <i class="fas fa-user"></i>
