--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+    <script> src="./script.js"</script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
 
 </head>
@@ -202,23 +203,27 @@
                 </div>
                 <div class="column right">
                     <div class="text">Message me</div>
-                    <form action="#">
+                    <form action="javascript:sendmail()" method="post">
                         <div class="fields">
                             <div class="field name">
-                                <input type="text" placeholder="Name" required>
+                                <input type="text" class="form-control" name="Name" id="Name" placeholder="Name" required="">
                             </div>
                             <div class="field email">
-                                <input type="email" placeholder="Email" required>
+                                <input type="email" class="form-control" name="Sender" id="Sender" placeholder="Email"
+                                required="">
                             </div>
                         </div>
                         <div class="field">
-                            <input type="text" placeholder="Subject" required>
+                            <input type="text" class="form-control" name="Subject" id="Subject" placeholder="Subject"
+                            required="">
                         </div>
                         <div class="field textarea">
-                            <textarea cols="30" rows="10" placeholder="Message.." required></textarea>
+                            <textarea name="Message" class="form-control" id="Message" placeholder="Message"
+                            required=""></textarea>
                         </div>
                         <div class="button-area">
-                            <button type="submit">Send message</button>
+                            <button type="submit">Send message
+                            </button>
                         </div>
                     </form>
                 </div>
@@ -232,5 +237,49 @@
     </footer>
 
     <script src="script.js"></script>
+  <script src="https://smtpjs.com/v3/smtp.js"></script>
+   
+  <script>  
+  
+       function sendmail(){
+      
+              var name = $('#Name').val();
+              var email = $('#Sender').val();
+              var subject = $('#Subject').val();
+        var message = $('#Message').val();
+  
+              // var body = $('#body').val();
+  
+              var Body='Name: '+name+'<br>Email: '+email+'<br>Subject: '+subject+'<br>Message: '+message;
+              //console.log(name, phone, email, message);
+  
+              Email.send({
+        SecureToken:"dd45288a-75c6-42eb-a1c4-473da5358386",
+				To: 'khilanpatel15@gmail.com',
+				From: "testingmail0722@gmail.com",
+				Subject: "New message on contact from "+name,
+				Body: Body
+			}).then(
+				message =>{
+					//console.log (message);
+					if(message=='OK'){
+					alert('Your mail has been send. Thank you for connecting.');
+					}
+					else{
+						console.error (message);
+						alert('There is error at sending message. ')
+						
+					}
+
+				}
+			);
+  
+  
+  
+          }
+  
+  
+      </script>
+   </script>
 </body>
 </html>
