--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                 </div>
                 <div class="column right">
                     <div class="text">Message me</div>
-                    <form action="javascript:sendmail()" method="post">
+                    <form action="mail.php" method="post">
                         <div class="fields">
                             <div class="field name">
                                 <input type="text" class="form-control" name="name" id="name" placeholder="name" required="">
